fix image bg loading and spacing

--- a/app/assets/stylesheets/umlaut/_resolve.scss
+++ b/app/assets/stylesheets/umlaut/_resolve.scss
@@ -211,24 +211,24 @@
     margin: $baseLineHeight;
   }
 
-
-  .umlaut-section.cover_image {
-    padding-left: $umlautIndent * 2;
-    /* IE7 and below, hide cover image entirely, since
-     we dont' have display:table to do it right. Use IE7 asterisk trick */
-    *display: none;
-  }
-
   .umlaut-section.cover_image .umlaut_section_content {
     text-align: right;
     img.cover_image {
       border: 1px solid $umlautHighlightedSectionBorderColor;
+      margin-left: $umlautIndent;
 
-      /* override to make cover smaller on smaller screens, 50% of
-      original in-style maxes.  */
-      @media (max-width: 900px) {
+      // IE7 and below, hide cover image entirely, since
+      // we dont' have display:table to do it right. Use IE7 asterisk trick
+      *display: none;
+
+      // override to make cover smaller on smaller screens
+      @media (max-width: 550px) {
         max-width:  100px !important;
         max-height: 80px !important;
+      }
+      // and disappear on really small ones
+      @media (max-width: 340px) {
+        display: none;
       }
     }
   }
